--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   <!-- Clinic Names -->
   <div class="clinic-names">
     <div>
-      <h1 style="font-size: 2.5rem;">Syanptica Pain Clinic</h1>
+      <h1 style="font-size: 2.5rem;">Synaptica Pain Clinic</h1>
       <h2 style="font-size: 1.2rem;">Advanced Pain Relief & Non-Surgical Treatment</h2>
       <p class="tagline">Pain Relief Without Surgery!</p>
     </div>
