--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #1a1a2e, #16213e, #0f3460);
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #fff;
-      user-select: none;
-      -webkit-user-drag: none;
-      overflow-x: hidden;
-    }
+html, body {
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(135deg, #f8f9fa, #e9ecef, #dee2e6);
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #000;
+  user-select: none;
+  -webkit-user-drag: none;
+  overflow-x: hidden;
+}
 
     body {
       min-height: 100vh;
