--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Synaptica Pain Clinic | Advanced Pain Relief & Non-Surgical Treatment</title>
 
   <!-- ✅ SEO Meta Tags -->
-  <meta name="description" content="Synaptica Pain Clinic - Advanced Pain Relief Without Surgery. Modern treatment for headaches, back pain, slip disc, knee pain, and more.">
+  <meta name="description" content="Synaptica Pain Clinic - Advanced Pain Relief Without Surgery. Modern treatment for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more">
   <meta name="keywords" content="Synaptica Pain Clinic, Pain Relief, Non-Surgical Treatment, Sciatica, Slip Disc, Migraine, Headache, Knee Pain, Back Pain, Sports Injury">
   <meta name="author" content="Synaptica Pain Clinic">
 
   <!-- ✅ Open Graph for Social Sharing -->
   <meta property="og:title" content="Synaptica Pain Clinic - Advanced Non-Surgical Pain Treatment" />
-  <meta property="og:description" content="Get pain relief without surgery. Treating headaches, sciatica, migraines, and more." />
+  <meta property="og:description" content="Specializing in pain relief without surgery. Expert doctor treatments for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more" />
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_IN" />
 
@@ -26,11 +26,11 @@
     "@context": "https://schema.org",
     "@type": "MedicalClinic",
     "name": "Synaptica Pain Clinic",
-    "description": "Specializing in pain relief without surgery. Treatments include headache, migraine, slip disc, and more.",
+    "description": "Specializing in pain relief without surgery. Expert doctor treatments for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain.",
     "medicalSpecialty": "PainManagement",
     "address": {
       "@type": "PostalAddress",
-      "addressLocality": "Bibvewadi",
+      "addressLocality": "Pune",
       "addressRegion": "Maharashtra",
       "addressCountry": "IN"
     },
@@ -185,12 +185,18 @@ html, body {
       <p class="tagline">शस्त्रक्रियेविना वेदना निवारण!</p>
     </div>
   </div>
+ <!-- Contact Info -->
+  <div class="contact-info">
+    <p>
+      <strong> Call or Whatsapp for Appointments on 7559299950</strong><br />
+      </p>
+  </div>
 
   <!-- Location Info -->
   <div class="location-info">
     <p>
-      📍 Located in <strong>Bibvewadi, Pune</strong><br />
-      Conveniently accessible from <strong>Satara Road, Swargate, Mukund Nagar, Padmavati, Sahakar Nagar</strong> and surrounding areas.
+      📍 Located in <strong> Pune</strong><br />
+      <strong> Shop No 7, New Gajara Society, Near Pushpam Gas Agency and Canara Bank, Bibwewadi Pune. 
     </p>
   </div>
 
