--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ html, body {
  <!-- Contact Info -->
   <div class="contact-info">
     <p>
-      <strong> Call or Whatsapp for Appointments on 7559299950</strong><br />
+      <h2>Call or Whatsapp for Appointments on 7559299950</h2>
       </p>
   </div>
 
