--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Synaptica Pain Clinic | Advanced Pain Relief & Non-Surgical Treatment</title>
+  <title>Synaptica Pain Clinic | Dr. Kanchan Godase - Spine,Joint & Nerve Pain Specialist in Pune| Advanced Non-Surgical Pain Treatments </title>
 
   <!-- ✅ SEO Meta Tags -->
   <meta name="description" content="Synaptica Pain Clinic - Advanced Pain Relief Without Surgery. Modern treatment for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more">
@@ -198,6 +198,7 @@ html, body {
       📍 Located in <strong> Pune</strong><br />
       <strong> Shop No 7, New Gajara Society, Near Pushpam Gas Agency and Canara Bank, Bibwewadi Pune. 
     </p>
+    <div style="overflow:hidden;resize:none;max-width:100%;width:400px;height:400px;"><div id="display-google-map" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=synaptica+pain+clinic+pune&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-map-html" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="get-map-data">premium bootstrap themes</a><style>#display-google-map img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
   </div>
 
   <!-- Treatments -->
