--- a/index.html
+++ b/index.html
@@ -1,230 +1,254 @@
 <!DOCTYPE html>
 <html lang="mr">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Synaptica Pain Clinic | Dr. Kanchan Godase - Spine,Joint & Nerve Pain Specialist in Pune| Advanced Non-Surgical Pain Treatments </title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Synaptica Pain Clinic | Dr. Kanchan Godase - Spine,Joint & Nerve Pain Specialist in Pune| Advanced Non-Surgical Pain Treatments </title>
 
-  <!-- ✅ SEO Meta Tags -->
-  <meta name="description" content="Synaptica Pain Clinic - Advanced Pain Relief Without Surgery. Modern treatment for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more">
-  <meta name="keywords" content="Synaptica Pain Clinic, Pain Relief, Non-Surgical Treatment, Sciatica, Slip Disc, Migraine, Headache, Knee Pain, Back Pain, Sports Injury">
-  <meta name="author" content="Synaptica Pain Clinic">
+    <!-- ✅ SEO Meta Tags -->
+    <meta name="description" content="Synaptica Pain Clinic - Advanced Pain Relief Without Surgery. Modern treatment for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more">
+    <meta name="keywords" content="Synaptica Pain Clinic, Pain Relief, Non-Surgical Treatment, Sciatica, Slip Disc, Migraine, Headache, Knee Pain, Back Pain, Sports Injury">
+    <meta name="author" content="Synaptica Pain Clinic">
 
-  <!-- ✅ Open Graph for Social Sharing -->
-  <meta property="og:title" content="Synaptica Pain Clinic - Advanced Non-Surgical Pain Treatment" />
-  <meta property="og:description" content="Specializing in pain relief without surgery. Expert doctor treatments for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more" />
-  <meta property="og:type" content="website" />
-  <meta property="og:locale" content="en_IN" />
+    <!-- ✅ Open Graph for Social Sharing -->
+    <meta property="og:title" content="Synaptica Pain Clinic - Advanced Non-Surgical Pain Treatment" />
+    <meta property="og:description" content="Specializing in pain relief without surgery. Expert doctor treatments for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain and more" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_IN" />
 
-  <!-- ✅ Allow search engine indexing -->
-  <meta name="robots" content="index, follow" />
-  <meta name="googlebot" content="index, follow" />
+    <!-- ✅ Allow search engine indexing -->
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
 
-  <!-- ✅ JSON-LD Schema Markup -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "MedicalClinic",
-    "name": "Synaptica Pain Clinic",
-    "description": "Specializing in pain relief without surgery. Expert doctor treatments for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain.",
-    "medicalSpecialty": "PainManagement",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Pune",
-      "addressRegion": "Maharashtra",
-      "addressCountry": "IN"
-    },
-    "url": "https://www.synapticapainclinic.com/"
-  }
-  </script>
+    <!-- ✅ JSON-LD Schema Markup -->
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org",
+            "@type": "MedicalClinic",
+            "name": "Synaptica Pain Clinic",
+            "description": "Specializing in pain relief without surgery. Expert doctor treatments for headache, migraine, neck pain, shoulder pain, back pain, sciatica, knee pain, ankle pain heel pain, diabetic neuropathy, cancer pain.",
+            "medicalSpecialty": "PainManagement",
+            "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "Pune",
+                "addressRegion": "Maharashtra",
+                "addressCountry": "IN"
+            },
+            "url": "https://www.synapticapainclinic.com/"
+        }
+    </script>
 
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+    <style>
+        * {
+            box-sizing: border-box;
+        }
 
-html, body {
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(135deg, #f8f9fa, #e9ecef, #dee2e6);
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #000;
-  user-select: none;
-  -webkit-user-drag: none;
-  overflow-x: hidden;
-}
+        html,
+        body {
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(135deg, #f8f9fa, #e9ecef, #dee2e6);
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            color: #000;
+            user-select: none;
+            -webkit-user-drag: none;
+            overflow-x: hidden;
+        }
 
-    body {
-      min-height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      padding: 2rem;
-      text-align: center;
-    }
+        body {
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 2rem;
+            text-align: center;
+        }
 
-    .highlight {
-      font-size: 1.2rem;
-      font-weight: normal;
-      color: #ccc;
-      margin-bottom: 1.2rem;
-    }
+        .highlight {
+            font-size: 1.2rem;
+            font-weight: normal;
+            color: #ccc;
+            margin-bottom: 1.2rem;
+        }
 
-    .clinic-names {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
+        .clinic-names {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2rem;
+            align-items: center;
+            margin-bottom: 1rem;
+        }
 
-    .clinic-names div {
-      max-width: 400px;
-    }
+        .clinic-names div {
+            max-width: 400px;
+        }
 
-    h1, h2 {
-      margin: 0.5rem 0;
-      animation: fadeIn 1s ease-out;
-    }
+        h1,
+        h2 {
+            margin: 0.5rem 0;
+            animation: fadeIn 1s ease-out;
+        }
 
-    .tagline {
-      font-style: italic;
-      font-size: 1rem;
-      margin-bottom: 1.5rem;
-      opacity: 0.9;
-    }
+        .tagline {
+            font-style: italic;
+            font-size: 1rem;
+            margin-bottom: 1.5rem;
+            opacity: 0.9;
+        }
 
-    .location-info {
-      margin-top: 1.5rem;
-      max-width: 600px;
-    }
+        .location-info {
+            margin-top: 1.5rem;
+            max-width: 600px;
+        }
 
-    .location-info p {
-      font-size: 1rem;
-      opacity: 0.85;
-    }
+        .location-info p {
+            font-size: 1rem;
+            opacity: 0.85;
+        }
 
-    .countdown {
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      flex-wrap: wrap;
-      margin-top: 1.5rem;
-    }
+        .countdown {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            flex-wrap: wrap;
+            margin-top: 1.5rem;
+        }
 
-    .countdown div {
-      background-color: rgba(255, 255, 255, 0.1);
-      padding: 1rem;
-      border-radius: 10px;
-      min-width: 70px;
-    }
+        .countdown div {
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 1rem;
+            border-radius: 10px;
+            min-width: 70px;
+        }
 
-    .countdown span {
-      display: block;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
+        .countdown span {
+            display: block;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
 
-    .label {
-      font-size: 0.75rem;
-      opacity: 0.6;
-    }
+        .label {
+            font-size: 0.75rem;
+            opacity: 0.6;
+        }
 
-    .treatment-section {
-      margin-top: 2rem;
-      max-width: 1000px;
-    }
+        .treatment-section {
+            margin-top: 2rem;
+            max-width: 1000px;
+        }
 
-    .treatment-section h2 {
-      font-size: 1.3rem;
-      margin-bottom: 1rem;
-    }
+        .treatment-section h2 {
+            font-size: 1.3rem;
+            margin-bottom: 1rem;
+        }
 
-    .treatments {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 2rem;
-      text-align: left;
-      font-size: 1rem;
-      line-height: 1.8;
-    }
+        .treatments {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 2rem;
+            text-align: left;
+            font-size: 1rem;
+            line-height: 1.8;
+        }
 
-    .treatments ul {
-      list-style: disc;
-      padding-left: 1.5rem;
-    }
+        .treatments ul {
+            list-style: disc;
+            padding-left: 1.5rem;
+        }
 
-    @media (max-width: 768px) {
-      .clinic-names {
-        flex-direction: column;
-      }
-    }
+        @media (max-width: 768px) {
+            .clinic-names {
+                flex-direction: column;
+            }
+        }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+    </style>
 </head>
 
 <body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
-  
-  <!-- Clinic Names -->
-  <div class="clinic-names">
-    <div>
-      <h1 style="font-size: 2.5rem;">Synaptica Pain Clinic</h1>
-      <h2 style="font-size: 1.2rem;">Advanced Pain Relief & Non-Surgical Treatment</h2>
-      <p class="tagline">Pain Relief Without Surgery!</p>
-    </div>
-    <div>
-      <h1 style="font-size: 2.2rem;">सिनॅप्टीका पेन क्लिनिक</h1>
-      <h2 style="font-size: 1.1rem;">आधुनिक वेदना निवारण आणि शस्त्रक्रियेविना उपचार</h2>
-      <p class="tagline">शस्त्रक्रियेविना वेदना निवारण!</p>
-    </div>
-  </div>
- <!-- Contact Info -->
-  <div class="contact-info">
-    <p>
-      <h2>Call or Whatsapp for Appointments on 7559299950</h2>
-      </p>
-  </div>
 
-  <!-- Location Info -->
-  <div class="location-info">
-    <p>
-      📍 Located in <strong> Pune</strong><br />
-      <strong> Shop No 7, New Gajara Society, Near Pushpam Gas Agency and Canara Bank, Bibwewadi Pune. 
-    </p>
-    <div style="overflow:hidden;resize:none;max-width:100%;width:400px;height:400px;"><div id="display-google-map" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=synaptica+pain+clinic+pune&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-map-html" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="get-map-data">premium bootstrap themes</a><style>#display-google-map img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
-  </div>
-
-  <!-- Treatments -->
-  <div class="treatment-section">
-    <h2>We Treat the Following Conditions / आम्ही खालील समस्यांवर उपचार करतो</h2>
-    <div class="treatments">
-      <ul>
-        <li>Headache (डोकेदुखी)</li>
-        <li>Neck Pain (मानदुखी)</li>
-        <li>Back Pain (पाठदुखी)</li>
-        <li>Sciatica (सायटिका)</li>
-      </ul>
-      <ul>
-        <li>Slip Disc (स्लिप डिस्क)</li>
-        <li>Knee Pain (गुडघेदुखी)</li>
-        <li>Shoulder Pain (खांदेदुखी)</li>
-        <li>Diabetic Neuropathy (डायबेटिक न्युरोपॅथी)</li>
-      </ul>
-      <ul>
-        <li>Cancer Pain (कॅन्सरच्या वेदना)</li>
-        <li>Sports Injury (स्पोर्ट्स इंज्युरी)</li>
-        <li>Migraine (मायग्रेन)</li>
-      </ul>
+    <!-- Clinic Names -->
+    <div class="clinic-names">
+        <div>
+            <h1 style="font-size: 2.5rem;">Synaptica Pain Clinic</h1>
+            <h2 style="font-size: 1.2rem;">Advanced Pain Relief & Non-Surgical Treatment</h2>
+            <p class="tagline">Pain Relief Without Surgery!</p>
+        </div>
+        <div>
+            <h1 style="font-size: 2.2rem;">सिनॅप्टीका पेन क्लिनिक</h1>
+            <h2 style="font-size: 1.1rem;">आधुनिक वेदना निवारण आणि शस्त्रक्रियेविना उपचार</h2>
+            <p class="tagline">शस्त्रक्रियेविना वेदना निवारण!</p>
+        </div>
     </div>
-  </div>
+    <!-- Contact Info -->
+    <div class="contact-info">
+        <p>
+        <h2>Call or Whatsapp for Appointments on 7559299950</h2>
+        </p>
+    </div>
 
- 
+    <!-- Location Info -->
+    <div class="location-info">
+        <p>
+            📍 Located in <strong> Pune</strong><br />
+            <strong> Shop No 7, New Gajara Society, Near Pushpam Gas Agency and Canara Bank, Bibwewadi Pune.
+        </p>
+        <div style="overflow:hidden;resize:none;max-width:100%;width:650px;height:300px;">
+            <div id="display-google-map" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=synaptica+pain+clinic+pune&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-map-html" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="get-map-data">premium bootstrap themes</a>
+            <style>
+                #display-google-map img.text-marker {
+                    max-width: none !important;
+                    background: none !important;
+                }
+
+                img {
+                    max-width: none
+                }
+            </style>
+        </div>
+
+    </div>
+
+    <!-- Treatments -->
+    <div class="treatment-section">
+        <h2>We Treat the Following Conditions / आम्ही खालील समस्यांवर उपचार करतो</h2>
+        <div class="treatments">
+            <ul>
+                <li>Headache (डोकेदुखी)</li>
+                <li>Neck Pain (मानदुखी)</li>
+                <li>Back Pain (पाठदुखी)</li>
+                <li>Sciatica (सायटिका)</li>
+            </ul>
+            <ul>
+                <li>Slip Disc (स्लिप डिस्क)</li>
+                <li>Knee Pain (गुडघेदुखी)</li>
+                <li>Shoulder Pain (खांदेदुखी)</li>
+                <li>Diabetic Neuropathy (डायबेटिक न्युरोपॅथी)</li>
+            </ul>
+            <ul>
+                <li>Cancer Pain (कॅन्सरच्या वेदना)</li>
+                <li>Sports Injury (स्पोर्ट्स इंज्युरी)</li>
+                <li>Migraine (मायग्रेन)</li>
+            </ul>
+        </div>
+    </div>
+
+
 </body>
+
 </html>
