--- a/index.html
+++ b/index.html
@@ -202,28 +202,7 @@
         </p>
     </div>
 
-    <!-- Location Info -->
-    <div class="location-info">
-        <p>
-            📍 Located in <strong> Pune</strong><br />
-            <strong> Shop No 7, New Gajara Society, Near Pushpam Gas Agency and Canara Bank, Bibwewadi Pune.
-        </p>
-        <div style="overflow:hidden;resize:none;max-width:100%;width:650px;height:300px;">
-            <div id="display-google-map" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=synaptica+pain+clinic+pune&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-map-html" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="get-map-data">premium bootstrap themes</a>
-            <style>
-                #display-google-map img.text-marker {
-                    max-width: none !important;
-                    background: none !important;
-                }
-
-                img {
-                    max-width: none
-                }
-            </style>
-        </div>
-
-    </div>
-
+    
     <!-- Treatments -->
     <div class="treatment-section">
         <h2>We Treat the Following Conditions / आम्ही खालील समस्यांवर उपचार करतो</h2>
@@ -246,6 +225,15 @@
                 <li>Migraine (मायग्रेन)</li>
             </ul>
         </div>
+    </div>
+<!-- Location Info -->
+    <div class="location-info">
+        <p>
+            📍 Located in <strong> Pune</strong><br />
+            <strong> Shop No 7, New Gajara Society, Near Pushpam Gas Agency and Canara Bank, Bibwewadi Pune.
+        </p>
+       <div style="overflow:hidden;resize:none;max-width:100%;width:720px;height:300px;"><div id="display-google-map" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=synaptica+pain+clinic+pune&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="embed-map-html" rel="nofollow" href="https://www.bootstrapskins.com/themes" id="get-map-data">premium bootstrap themes</a><style>#display-google-map img.text-marker{max-width:none!important;background:none!important;}img{max-width:none}</style></div>
+
     </div>
 
 
