--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
     <!-- Contact Info -->
     <div class="contact-info">
         <p>
-        <h2>Call or Whatsapp for Appointments on 7559299950</h2>
+        <h2>Call or Whatsapp for Appointments on
+             <a href="tel:7559299950">7559299950</a>
+        </h2>
         </p>
     </div>
 
