minor chnages to index html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         [x-cloak] { display: none !important; }
         .hero-bg {
             /* RESTORED WORKING IMAGE URL */
-            background: linear-gradient(rgba(0, 59, 112, 0.85), rgba(0, 59, 112, 0.7)), url('https://images.unsplash.com/photo-1631815589968-fdb09a223b1e?q=80&w=2070&auto=format&fit=crop');
+            background: linear-gradient(rgba(0, 59, 112, 0.85), rgba(0, 59, 112, 0.7)), url('assets/images/main_hero_image_1.jpg?q=80&w=2070&auto=format&fit=crop');
             background-size: cover;
             background-position: center;
         }
@@ -154,7 +154,7 @@
                 <div class="relative">
                     <div class="absolute -top-4 -left-4 w-24 h-24 bg-blue-100 rounded-full z-0"></div>
                     <div class="absolute -bottom-4 -right-4 w-32 h-32 bg-blue-50 rounded-full z-0"></div>
-                    <img src="https://images.unsplash.com/photo-1622253692010-333f2da6031d?q=80&w=1000&auto=format&fit=crop" alt="Doctor consulting patient" class="relative z-10 rounded-2xl shadow-2xl w-full object-cover h-[400px]">
+                    <img src="assets/images/doctor_explaining_to_patient_1.jpg?q=80&w=1000&auto=format&fit=crop" alt="Expert MBBs,MD Doctor from Synaptica Pain Clinic consulting with patient in clinic, both seated and engaged in discussion about treatment options" class="relative z-10 rounded-2xl shadow-2xl w-full object-cover h-[400px]">
                 </div>
                 <div>
                     <h2 class="text-blue-600 font-bold tracking-wide uppercase text-sm mb-2">About Us</h2>
@@ -184,21 +184,21 @@
                     
                     <div class="space-y-8">
                         <div class="flex items-start group cursor-pointer">
-                            <div class="bg-blue-100 p-4 rounded-full text-blue-600 mr-5 group-hover:bg-blue-600 group-hover:text-white transition">
+                            <a href="tel:7559299950" class="bg-blue-100 p-4 rounded-full text-blue-600 mr-5 group-hover:bg-blue-600 group-hover:text-white transition block">
                                 <i class="fa-solid fa-phone text-2xl"></i>
-                            </div>
+                            </a>
                             <div>
                                 <h4 class="font-bold text-gray-900 text-lg">Phone</h4>
-                                <a href="tel:7559299950" class="text-gray-600 hover:text-blue-600 block text-lg">+91 7559299950</a>
+                                <a href="tel:7559299950" class="text-gray-600 hover:text-blue-600 block text-lg" aria-label="Call 7559299950">7559299950</a>
                             </div>
                         </div>
                         <div class="flex items-start group cursor-pointer">
-                            <div class="bg-green-100 p-4 rounded-full text-green-600 mr-5 group-hover:bg-green-600 group-hover:text-white transition">
+                            <a href="https://wa.me/917559299950" target="_blank" class="bg-green-100 p-4 rounded-full text-green-600 mr-5 group-hover:bg-green-600 group-hover:text-white transition block">
                                 <i class="fa-brands fa-whatsapp text-2xl"></i>
-                            </div>
+                            </a>
                             <div>
                                 <h4 class="font-bold text-gray-900 text-lg">WhatsApp</h4>
-                                <a href="https://wa.me/917559299950" class="text-gray-600 hover:text-green-600 block text-lg">Chat on WhatsApp</a>
+                                <a href="https://wa.me/917559299950" class="text-gray-600 hover:text-green-600 block text-lg" target="_blank">Chat on WhatsApp</a>
                             </div>
                         </div>
                         <div class="flex items-start group">
@@ -225,7 +225,7 @@
                  <span class="text-2xl font-bold text-white">Synaptica Pain Clinic</span>
             </div>
             <p class="mb-4 text-sm text-gray-500">© 2025 Synaptica Pain Clinic. All Rights Reserved.</p>
-            <p class="text-xs text-gray-600 max-w-2xl mx-auto">Disclaimer: Results may vary from patient to patient. This information is for educational purposes only and does not constitute medical advice.</p>
+
         </div>
     </footer>
 
@@ -371,7 +371,7 @@
                     { 
                         name: "Trigeminal Neuralgia", 
                         // Face/Head
-                        image: "assets/images/triageminal_neuralgia_2.jpg?q=80&w=1000&auto=format&fit=crop", 
+                        image: "assets/images/trigeminal_neuralgia_1.jpg?q=80&w=1000&auto=format&fit=crop", 
                         desc: "A chronic pain condition affecting the trigeminal nerve in the face, causing shock-like pain.", 
                         symptoms: ["Episodes of severe, shooting pain", "Pain triggered by touching the face", "Spontaneous attacks of pain", "Pain focused in cheek/jaw"] 
                     },
