update meta title and meta description

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Synaptica Superspeciality Pain Clinic Pune Dr. Kanchan Godase - Spine,Joint &amp; Nerve Pain Specialist in Pune| Advanced Non-Surgical Pain Treatments</title>
-    <meta name="description" content="Leading Pain Clinic in Pune & PCMC. We provide advanced non-surgical treatments for Back Pain, Knee Pain, Sciatica, and Migraines using PRP, Ozone Therapy, and more.">
+    <title>Top Non-Surgical Pain Clinic in Pune | Spine, Joint & Nerve Care</title>
+    <meta name="description" content="Get lasting relief from Back, Knee, Nerve & Chronic pain at Synaptica Pain Clinic, Pune. Evidence-based, Non-Surgical Treatments. Book your consultation today!">
     <meta name="keywords" content="Pain Clinic Pune, Back Pain Treatment Pune, Sciatica Specialist, PRP Therapy Pune, Non-surgical spine treatment">
     
     <script src="https://cdn.tailwindcss.com"></script>
@@ -422,3 +422,4 @@
     </script>
 </body>
 </html>
+
